Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98369

[macOS] Qt internal warning when FontMetrics is used

    XMLWordPrintable

Details

    • macOS
    • 69d525a6fa (qt/qtbase/dev) 69d525a6fa (qt/tqtc-qtbase/dev) fcd5a02886 (qt/qtbase/6.3) fcd5a02886 (qt/tqtc-qtbase/6.3) fcd5a02886 (qt/tqtc-qtbase/6.3.0) 64dd5a8183 (qt/tqtc-qtbase/dev) 36427480dd (qt/qtbase/6.3) 34d9da8371 (qt/qtbase/6.2)

    Description

      A simple usage of FontMetrics generates warning:

      qt.qpa.fonts: Populating font family aliases took 75 ms. Replace uses of missing font family ".AppleSystemUIFont" with one that exists to avoid this cost. 
      

      For example, this simple code generates warning right on app start:

      import QtQuick
      
      Window {
          width: 640
          height: 480
          visible: true
      
          FontMetrics {
              id: fm
              font.italic: true // comment this to stop warning
              readonly property int textWidth: fm.advanceWidth('test')
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            studiosus Vladimir Belyavsky
            Votes:
            9 Vote for this issue
            Watchers:
            11 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: